testdata/baselines/reference/compiler/tsconfigSimpleTest.errors.txt
foo.ts(2,7): error TS2322: Type 'undefined' is not assignable to type 'string'.


==== tsconfig.json (0 errors) ====
    {
        "compilerOptions": {
            "target": "es2020",
            "strictNullChecks": true
        }
    }
==== foo.ts (1 errors) ====
    export {};
    const x: string = undefined;
          ~
!!! error TS2322: Type 'undefined' is not assignable to type 'string'.